# ALCPT

./: .dockerignore  .gitignore  .~lock.Reading Question_109.xlsx#  20200212.sql  20240517.sql  20240916.sql  ALCPT_nginx.conf  ALCPT_uwsgi.ini  Dockerfile  Dump20191111.sql  Dump20200210.sql  Dump20200416.sql  Dump20200504.sql  Dump20200924.sql  Dump20200928.sql  Dump20201014.sql  Dump20201021.sql  Dump20201128.sql  Dump20201217.sql  Dump20201229.sql  Dump20210315.sql  Dump20221218.sql  Dump20240416.sql  Dump20240520.sql  Dump20240918.sql  Dump20241223.sql  Makefile  Pipfile  README.md  Reading Question_109.xlsx  Test2_listening.xlsx  Test3_listening.xlsx  Untitled Diagram.drawio  _BACKUP_18941.gitignore  _LOCAL_18941.gitignore  alcpt-pip-requirement.txt  credentials.csv  dasd  db.json  db.sqlite3  (+6 more)
Online_Exam/: cron.py  settings.py  timer.py  urls.py  wsgi.py
alcpt/: achievement.py  admin.py  apps.py  cron.py  decorators.py  definitions.py  email.py  email_verification.py  exam.py  exceptions.py  forms.py  group.py  jinja2.py  middleware.py  models.py  practice.py  proclamation.py  question.py  registration.py  scores.py  simulation_exam.py  system.py  systemmanage.py  tag.py  testee.py  testpaper.py  utility.py  viewer.py  views.py
backup/: default-duckvm-2022-10-03-200001.dump  default-duckvm-2022-10-03-200501.dump  default-duckvm-2022-10-03-201001.dump  default-duckvm-2022-10-03-201501.dump  default-duckvm-2022-10-03-202001.dump  default-duckvm-2022-10-03-202501.dump  default-duckvm-2022-10-13-140902.dump  default-duckvm-2022-10-13-141001.dump  (+6 more)
static/: header.css  (+1 more)
(+432 files in other folders)
