[tool.poetry]
name = "alcpt"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django-simple-captcha = "0.5.12"
django-plotly-dash = "*"
jinja2 = "3.0.*"
pandas = "*"
psycopg2 = "*"
pytz = "*"
xlrd = "1.2.0"

[tool.poetry.dev-dependencies]
black = "*"
django-extensions = "3.0.8"
pylint = "*"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
